code/human_written_tests/WebAssembly/processed_control_flow_validation/test_return_1.wast
(assert_invalid
  (module (func $type-value-empty-vs-num (result i32) (return)))
  "type mismatch"
)